# streaming_graph_partitioning

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  data_sets  kmake.sh  main.cpp  restAPI.cpp
databases/: g1_p0_nodes.db  g1_p0_nodes.index.db  g1_p0_properties.db  g1_p0_relations.db  g1_p1_nodes.db  g1_p1_nodes.index.db  g1_p1_properties.db  g1_p1_relations.db  g1_p3_nodes.db  g1_p3_properties.db
kafka_producer/: dblp_loader.py  edgeSchema.json  sample.py  sampleEdge.json
libs/: Car.h  FileHandler.cpp  KafkaTest.cpp  Partition.cpp  Partition.h  Partitioner.cpp  Partitioner.h  Vehicle.cpp  exe_comp.py  myFunctions.h
libs/graphStore/: NodeBlock.cpp  NodeManager.cpp  NodeManager.h  RelationBlock.cpp  RelationBlock.h
libs/headers/: KafkaTest.h
libs/junks/: Car.cpp  FileHandler.h  NameSpaceTest.h  NameSpaceTest2.h  Person.cpp  Person.h  Vehicle.h
libs/restAPI/: GraphEndpoint.cpp
libs/transports/http/: DataPublisher.cpp  DataPublisher.h
libs/transports/websocket/: WebSocketServer.cpp  WebSocketServer.h
tests/: dataPublisher.cpp
visualizer/: .eslintrc.js  .gitignore  babel.config.json  index.html  package-lock.json  package.json  webpack.config.js
visualizer/source/: bootstrap.jsx
visualizer/source/Application/: Routing.jsx
visualizer/source/Application/pages/: Base.jsx  Welcome.jsx
visualizer/source/Application/pages/components/: MUIAlert.jsx  VisNet.jsx  temp.js
visualizer/source/Application/theme/: theme.js
visualizer/source/assets/: index.html
visualizer/streaming_graph_partitioning_visualizer/: package-lock.json  package.json
visualizer/streaming_graph_partitioning_visualizer/src/: App.js  Graph.Backup.jsx  Graph.jsx  remove.js
